@@ -24,15 +24,6 @@ package|;
 end_package
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|Serializable
-import|;
-end_import
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -53,18 +44,7 @@ DECL|class|Bucket
 specifier|public
 class|class
 name|Bucket
-implements|implements
-name|Serializable
 block|{
-DECL|field|serialVersionUID
-specifier|private
-specifier|static
-specifier|final
-name|long
-name|serialVersionUID
-init|=
-literal|1
-decl_stmt|;
 DECL|field|NULL_VALUE
 specifier|private
 specifier|static
@@ -79,11 +59,6 @@ specifier|private
 name|String
 name|bucketKey
 decl_stmt|;
-DECL|method|Bucket
-specifier|public
-name|Bucket
-parameter_list|()
-block|{    }
 DECL|method|Bucket
 specifier|public
 name|Bucket
