@@ -35,15 +35,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|Serializable
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|Locale
@@ -136,18 +127,7 @@ class|class
 name|CountMetric
 extends|extends
 name|Metric
-implements|implements
-name|Serializable
 block|{
-DECL|field|serialVersionUID
-specifier|private
-specifier|static
-specifier|final
-name|long
-name|serialVersionUID
-init|=
-literal|1
-decl_stmt|;
 DECL|field|count
 specifier|private
 name|long
@@ -321,7 +301,7 @@ expr_stmt|;
 block|}
 DECL|method|getValue
 specifier|public
-name|double
+name|Long
 name|getValue
 parameter_list|()
 block|{
