@@ -35,15 +35,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|Serializable
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|Locale
@@ -136,27 +127,7 @@ class|class
 name|MaxMetric
 extends|extends
 name|Metric
-implements|implements
-name|Serializable
 block|{
-DECL|field|serialVersionUID
-specifier|private
-specifier|static
-specifier|final
-name|long
-name|serialVersionUID
-init|=
-literal|1
-decl_stmt|;
-DECL|field|MAX
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|MAX
-init|=
-literal|"max"
-decl_stmt|;
 DECL|field|longMax
 specifier|private
 name|long
@@ -338,7 +309,7 @@ expr_stmt|;
 block|}
 DECL|method|getValue
 specifier|public
-name|double
+name|Number
 name|getValue
 parameter_list|()
 block|{
@@ -369,16 +340,13 @@ index|[]
 name|getColumns
 parameter_list|()
 block|{
+return|return
+operator|new
 name|String
 index|[]
-name|cols
-init|=
 block|{
 name|columnName
 block|}
-decl_stmt|;
-return|return
-name|cols
 return|;
 block|}
 DECL|method|update
