@@ -35,15 +35,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|Serializable
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|Locale
@@ -136,23 +127,12 @@ class|class
 name|MeanMetric
 extends|extends
 name|Metric
-implements|implements
-name|Serializable
 block|{
 comment|// How'd the MeanMetric get to be so mean?
 comment|// Maybe it was born with it.
 comment|// Maybe it was mayba-mean.
 comment|//
 comment|// I'll see myself out.
-DECL|field|serialVersionUID
-specifier|private
-specifier|static
-specifier|final
-name|long
-name|serialVersionUID
-init|=
-literal|1
-decl_stmt|;
 DECL|field|columnName
 specifier|private
 name|String
@@ -372,9 +352,6 @@ decl_stmt|;
 name|doubleSum
 operator|+=
 name|d
-operator|.
-name|doubleValue
-argument_list|()
 expr_stmt|;
 block|}
 else|else
@@ -395,9 +372,6 @@ decl_stmt|;
 name|longSum
 operator|+=
 name|l
-operator|.
-name|doubleValue
-argument_list|()
 expr_stmt|;
 block|}
 block|}
@@ -422,21 +396,18 @@ index|[]
 name|getColumns
 parameter_list|()
 block|{
+return|return
+operator|new
 name|String
 index|[]
-name|cols
-init|=
 block|{
 name|columnName
 block|}
-decl_stmt|;
-return|return
-name|cols
 return|;
 block|}
 DECL|method|getValue
 specifier|public
-name|double
+name|Double
 name|getValue
 parameter_list|()
 block|{
@@ -455,28 +426,18 @@ operator|==
 literal|0
 condition|)
 block|{
-name|double
-name|ave
-init|=
+return|return
 name|doubleSum
 operator|/
 name|dcount
-decl_stmt|;
-return|return
-name|ave
 return|;
 block|}
 else|else
 block|{
-name|double
-name|ave
-init|=
+return|return
 name|longSum
 operator|/
 name|dcount
-decl_stmt|;
-return|return
-name|ave
 return|;
 block|}
 block|}
