@@ -128,15 +128,6 @@ name|MinMetric
 extends|extends
 name|Metric
 block|{
-DECL|field|serialVersionUID
-specifier|private
-specifier|static
-specifier|final
-name|long
-name|serialVersionUID
-init|=
-literal|1L
-decl_stmt|;
 DECL|field|longMin
 specifier|private
 name|long
@@ -321,21 +312,18 @@ index|[]
 name|getColumns
 parameter_list|()
 block|{
+return|return
+operator|new
 name|String
 index|[]
-name|cols
-init|=
 block|{
 name|columnName
 block|}
-decl_stmt|;
-return|return
-name|cols
 return|;
 block|}
 DECL|method|getValue
 specifier|public
-name|double
+name|Number
 name|getValue
 parameter_list|()
 block|{
