@@ -35,15 +35,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|Serializable
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|Locale
@@ -136,18 +127,7 @@ class|class
 name|SumMetric
 extends|extends
 name|Metric
-implements|implements
-name|Serializable
 block|{
-DECL|field|serialVersionUID
-specifier|private
-specifier|static
-specifier|final
-name|long
-name|serialVersionUID
-init|=
-literal|1
-decl_stmt|;
 DECL|field|columnName
 specifier|private
 name|String
@@ -324,16 +304,13 @@ index|[]
 name|getColumns
 parameter_list|()
 block|{
+return|return
+operator|new
 name|String
 index|[]
-name|cols
-init|=
 block|{
 name|columnName
 block|}
-decl_stmt|;
-return|return
-name|cols
 return|;
 block|}
 DECL|method|update
@@ -373,9 +350,6 @@ decl_stmt|;
 name|doubleSum
 operator|+=
 name|d
-operator|.
-name|doubleValue
-argument_list|()
 expr_stmt|;
 block|}
 else|else
@@ -391,9 +365,6 @@ decl_stmt|;
 name|longSum
 operator|+=
 name|l
-operator|.
-name|longValue
-argument_list|()
 expr_stmt|;
 block|}
 block|}
@@ -413,7 +384,7 @@ return|;
 block|}
 DECL|method|getValue
 specifier|public
-name|double
+name|Number
 name|getValue
 parameter_list|()
 block|{
@@ -431,9 +402,6 @@ block|}
 else|else
 block|{
 return|return
-operator|(
-name|double
-operator|)
 name|longSum
 return|;
 block|}
